Archive2/af/ef23aaa077df1c/output
main.cpp: In instantiation of 'void g(T) [with T = int]':
main.cpp:39:7:   required from here
main.cpp:11:9: error: use of 'auto f(Lhs, Rhs) [with Lhs = double; Rhs = int]' before deduction of 'auto'
   f(x, p);                                                                                            
         ^
main.cpp:11:9: error: invalid use of 'auto'
